--- a/style.css
+++ b/style.css
@@ -13,13 +13,18 @@ body{
    padding-top:100px;
    }
 
+
+
+
 .hero{
     
     position:relative;
-min-height: 100vh;
+min-height: 120vh;
+
 }
 
 .hero {
+    padding-bottom:100px;
 font-weight:bold;
   text-shadow: 0 4px 8px rgba(0,0,0,0.6);
 }
@@ -77,21 +82,21 @@ font-weight:bold;
     
 }
 
-.hero::before {
-    content:'';
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-image: url(imgs/maried.jpg);
-    z-index:-1;
-   
-      background-size: cover;
-    background-position: center top;
-    background-repeat: no-repeat;
 
+ .hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(imgs/maried.jpg);
+  background-size: auto; 
+  background-position: center top;
+  background-repeat: no-repeat;
+  z-index: -1;
 }
+
 @media (max-width:992px) {
     html{
         font-size:75%;
@@ -193,6 +198,8 @@ body {
 
 /* PART 2 */
 .mynavbar{
+    height:80px;
+    padding-top:10px;
      position: sticky;
   z-index: 99;
     /* background-color: rgba(255, 255, 255, 0.3) !important; */
@@ -678,4 +685,9 @@ footer li{
 
 .rsvp p{
     color:white;
+}
+
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
 }
